--- a/panitia/templates/datapemilih.html
+++ b/panitia/templates/datapemilih.html
@@ -96,6 +96,9 @@
     .btn-back{
       border: none; width: 10%; height:30px;border-radius:5px; background-color:#fd810d; font-size:15px; color:white;
     }
+    .btn-tambah{
+      margin-top:15px; margin-left:400px; border: none;width: 15%; height:30px;border-radius:5px; background-color:#0275FC; font-size:15px; color:white;
+    }
     
 </style>
 <section>
