--- a/panitia/templates/tes/tes.html
+++ b/panitia/templates/tes/tes.html
@@ -50,22 +50,28 @@
         #popupvote:target {
             visibility: visible;
         }
+        .apasih{
+            font-size: 15px; border: 1px solid black; width: 500px;
+        }
+        
     </style>
     <div>
         <a href="#popupvote"><button class="btn-new">Buat Vote</button></a>
         <div id="popupvote">
             <div class="window">
-                <a href="#" class="close-button" title="Close">X</a>
+                <div style="width: 50%;">
+                    <a href="#" class="close-button" title="Close">X</a>
                     <h2>Tambah Pemilihan</h2>
-                    <form method="post"action="">
+                    <form method="POST" action="">
                         {% csrf_token %}
-                        Tgl/Bln/Thn : <input type="date" id="data" name="data">
-                        Judul Pemilihan : <input type="text" id="judulpemilihan" name="judulpemilihan">
-                        <button type="submit">Tambah</button>
+                        <div class="apasih">
+                            <input type="date">{{form.as_p}}</div>
+                        <button class="btn-tambah" type="submit" name="submit"> Tambah </button>
                     </form>
-                
+                </div>
             </div>
         </div>
+        
         <table class="tabel" style="width: 80%; border-collapse: collapse; margin-top:30px; margin-left: 10%;">
             <thead>
                 
@@ -100,4 +106,5 @@
         </table>
     </div>
 </section>
+
 {% endblock %}
