--- a/panitia/templates/dashboard.html
+++ b/panitia/templates/dashboard.html
@@ -45,6 +45,9 @@
         .namapanitia{
             display: block; color: white; text-align: center; padding: 14px; text-decoration: none;
         }
+        .namajudul{
+            display: block; color: black; text-align: center; padding: 14px; text-decoration: none;
+        }
         
         
 
